# taxi_prediction_fullstack_josefin

./: .gitignore  README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/backend/model/: taxi_price_prediction.joblib
src/taxipred/data/: cleaned_taxi_trip_pricing.csv  frontend_data.csv  taxi_cleaned.csv
src/taxipred/frontend/: app.py  dashboard.py
src/taxipred/frontend/pages/: data.py  health.py
src/taxipred/model_development/: eda.ipynb  eda_simple.ipynb  model_dev.ipynb  taxi_price_prediction.joblib  taxi_prices_prediction.joblib
src/taxipred/utils/: constants.py
